--- a/map.html
+++ b/map.html
@@ -29,10 +29,10 @@ title: Fieldwork Map
     // 3. ピンのデータ (ここに写真と場所を追加していく)
     var locations = [
         {
-            name: "下鴨神社・糺の森",
-            lat: 35.0392, 
-            lng: 135.7730,
-            text: "川の流れに反して発生するアメンボの波紋。湧き水の静けさ。",
+            name: "下鴨神社・奈良の小川",
+            lat: 35.037511, 
+            lng: 135.772732,
+            text: "川の流れに反して、発生するアメンボの波紋。",
             img: "./journeys/fukumoto/shimogamo01.jpg" // アップした写真のパス
         },
         {
