--- a/map.html
+++ b/map.html
@@ -33,7 +33,7 @@ title: Fieldwork Map
             lat: 35.037511, 
             lng: 135.772732,
             text: "川の流れに反して、発生するアメンボの波紋。",
-            img: "./journeys/fukumoto/shimogamo01.jpg" // アップした写真のパス
+            img: "./assets/image/nara-ogawa.png" // 奈良の小川の写真
         },
         {
             name: "鴨川デルタ",
