マップページのコメント文章を修正
Removed a location entry and updated the memo for another location.

--- a/map.html
+++ b/map.html
@@ -177,17 +177,10 @@ title: Fieldwork Map
     // 2. データ
     var locations = [
         {
-            name: "下鴨神社・糺の森",
-            lat: 35.0392, 
-            lng: 135.7730,
-            memo: "<b>【観察記録】</b><br>湧き水の静けさが印象的でした。古くからの植生が残るこの場所は、都市の中の貴重な生態系ポケットです。<br>水面をよく見ると、小さな気泡が絶え間なく上がってきているのが分かります。",
-            images: ["./journeys/fukumoto/shimogamo01.jpg"]
-        },
-        {
             name: "下鴨神社・奈良の小川",
             lat: 35.037511, 
             lng: 135.772732,
-            memo: "<b>【観察記録】</b><br>川の流れに反して、発生するアメンボの波紋。<br>この波紋は、流れに逆らって進もうとするアメンボの足が生み出す微細な振動によるものです。",
+            memo: "<b>【観察記録】</b><br>川の流れに反して、発生するアメンボの波紋。<br>目を凝らさないと見えない水面のアーティストの動きに気づけるか",
             images: ["./assets/image/nara-ogawa.png"]
         },
         {
