マップのスポット三つを追加（御手洗川、御手洗池、泉川）

--- a/map.html
+++ b/map.html
@@ -184,11 +184,25 @@ title: Fieldwork Map
             images: ["./assets/image/nara-ogawa.png"]
         },
         {
-            name: "鴨川デルタ（飛び石）",
+            name: "下鴨神社・御手洗川",
             lat: 35.0298,
             lng: 135.7728,
-            memo: "高野川と賀茂川の合流点。<br>詳しくは<a href='/iki-mono/journeys/fukumoto/' target='_blank'>Fukumoto Labのページ</a>を参照。",
-            images: ["./journeys/fukumoto/delta01.jpg"]
+            memo: "<b>【観察記録】</b><br>輪橋のところ。",
+            images: ["./assets/image/mitarashi-gawa.png"]
+        }
+                {
+            name: "下鴨神社・御手洗池",
+            lat: 35.0298,
+            lng: 135.7728,
+            memo: "<b>【観察記録】</b><br>湧水。足つけ神事などが有名",
+            images: ["./assets/image/mitarashi-ike.png"]
+        }
+            {
+            name: "下鴨神社・泉川",
+            lat: 35.0298,
+            lng: 135.7728,
+            memo: "<b>【観察記録】</b><br>湧水。足つけ神事などが有名",
+            images: ["./assets/image/izumi-gawa.png"]
         }
     ];
 
