--- a/journeys/fukumoto/kodokan.html
+++ b/journeys/fukumoto/kodokan.html
@@ -137,8 +137,14 @@ title: Research Log: 二傳 (Niden)
             <li>お茶が養うのは観察眼</li>
             <li>何をどう年間植えたりしてるのか</li>
             <li>最後の30分で振り返りをする</li>
-            <li>（メモを追加...）</li>
-            <li>（メモを追加...）</li>
+            <li>水にもさまざまある。地下水と水道水の違い。切り口によって、見方が変わる。知ってるはずのものと出会いなおす。みたことのある石や木を解説を聴きながら視点を持って歩くうちに、見え方が変わる。</li>
+            <li>自然を取り込んできた京都の暮らし。日々愛でる、庭の中に知恵として入っている。維持する技もある。感性。何に心を動かされ何を大事に思い、何を残そうとしてきたのか</li>
+            <li>秋田県立大の地衣類の専門家の視点。お掃除をしながら、発見していく。宝物探しのように庭を歩く。</li>
+            <li>「お茶の庭の作り方」・・・太田さんが説明されたほうが深めやすい。相手に合わせてお話しされるスタイル</li>
+            <li>櫻井さんのアイデア。スマホを子供達が持って、庭の発見を写真を撮っていく。訪れた人が何をこの庭を歩いて感じ取っていくのか</li>
+            <li>相手に合わせて完全にあつらえる。</li>
+            <li>京都の文化を生物多様性として捉えたときに、暮らしの中に使われているいろんな植物。お茶でくくるとハイコンテンツになる。家の中にある「水を含む器」や「水を含む植物」を発見してきてもらう。庭にある「いきもの」がいかにして暮らしの中に取り込まれてきたのか？をさぐる</li>
+            <li>
         </ul>
     </div>
 
