--- a/journeys/fukumoto/kodokan.html
+++ b/journeys/fukumoto/kodokan.html
@@ -129,6 +129,21 @@ title: Research Log: 二傳 (Niden)
         </ul>
     </div>
 
+    ## タイムライン & ルート 
+* **09:00 - 16:00** (親子連れは16:30頃まで)
+* **事前学習**: 京都市立図書館を活用
+* **備品**: 換えの靴下（悪天候
+
+* **14:15 - 17:00**: 弘道館 
+* **午後**: ※天候による 
+* **13:15**: 到着、イントロ（5分：テーマを伝える）
+* **13:20**: 探索（40分：庭と室内）
+* **14:00 - 14:30**: 浜崎さんお話（30分：見えてる部分と見えてない部分、表と裏）
+* **14:30 - 15:00**: ふりかえり・休憩（30分）
+* **15:00 - **: ワークショップ開始
+* **17:00**: ワークショップ終了・撤収
+    
+
     <div class="note-section">
         <h2>ヒアリング・観察メモ</h2>
         <p>（ここに箇条書きでメモを追加していく）</p>
