--- a/journeys/fukumoto/kodokan.html
+++ b/journeys/fukumoto/kodokan.html
@@ -230,7 +230,7 @@ title: Research Log: 二傳 (Niden)
             <li>京都の文化を生物多様性として捉える。暮らしの中に使われている色々な植物。</li>
             <li>お茶でくくるとハイコンテンツになるので、家の中にある「水を含む器」や「水を含む植物」を発見してきてもらうなど、入り口を工夫する。</li>
             <li>庭にある「いきもの」がいかにして暮らしの中に取り込まれてきたのか？を探る。</li>
-            <li>参考動画: <a href="https://youtu.be/uklzBqR_oIU" target="_blank" class="note-link">https://youtu.be/uklzBqR_oIU</a></li>
+            <li>参考動画: <a href="https://youtu.be/v68__8Ui9Jo" target="_blank" class="note-link">https://youtu.be/uklzBqR_oIU</a></li>
         </ul>
     </div>
 
