--- a/journeys/fukumoto/kodokan.html
+++ b/journeys/fukumoto/kodokan.html
@@ -1,4 +1,3 @@
----
 layout: default
 title: Research Log: 二傳 (Niden)
 ---
@@ -9,7 +8,7 @@ title: Research Log: 二傳 (Niden)
         --color-primary: #00608d;
         --color-secondary: #333;
         --color-muted: #666;
-        --color-light: #999;
+        --color-light: #555;
         --color-bg-light: #f4f4f4;
         --color-highlight: #e0f7fa;
         --font-serif: 'Shippori Mincho', serif;
@@ -19,31 +18,31 @@ title: Research Log: 二傳 (Niden)
 
     /* 基本スタイル */
     .field-note-container {
-        max-width: 800px;
+        max-width: 860px;
         margin: 0 auto;
-        padding: 40px 20px;
+        padding: 50px 20px;
         font-family: var(--font-sans);
         color: var(--color-secondary);
-        line-height: 1.8;
+        line-height: 1.9;
     }
 
     /* ヘッダー */
     .note-header {
-        margin-bottom: 50px;
-        padding-bottom: 20px;
+        margin-bottom: 60px;
+        padding-bottom: 25px;
         border-bottom: 2px solid var(--color-secondary);
     }
 
     .note-meta {
         font-family: var(--font-mono);
-        font-size: 0.9rem;
+        font-size: 0.95rem;
         color: var(--color-muted);
-        margin-bottom: 5px;
+        margin-bottom: 8px;
     }
 
     .note-title {
         font-family: var(--font-serif);
-        font-size: 2.0rem;
+        font-size: 2.1rem;
         font-weight: 700;
         margin: 0;
         letter-spacing: 0.05em;
@@ -51,20 +50,20 @@ title: Research Log: 二傳 (Niden)
 
     /* セクション */
     .note-section {
-        margin-bottom: 50px;
+        margin-bottom: 60px;
     }
 
     .note-section h2 {
-        font-size: 1.1rem;
+        font-size: 1.25rem;
         font-weight: bold;
         color: var(--color-primary);
-        margin-bottom: 15px;
-        padding-left: 12px;
-        border-left: 4px solid var(--color-primary);
-        line-height: 1;
+        margin-bottom: 18px;
+        padding-left: 14px;
+        border-left: 5px solid var(--color-primary);
+        line-height: 1.2;
     }
 
-    /* リスト */
+    /* 通常リスト */
     .note-list {
         list-style: none;
         padding: 0;
@@ -73,42 +72,69 @@ title: Research Log: 二傳 (Niden)
 
     .note-list li {
         position: relative;
-        padding-left: 20px;
-        margin-bottom: 12px;
+        padding-left: 28px;
+        margin-bottom: 16px;
+        line-height: 1.7;
     }
 
     .note-list li::before {
-        content: "・";
+        content: "●";
         position: absolute;
         left: 0;
         color: var(--color-light);
+        font-size: 1.1em;
+        top: 0.1em;
     }
 
-    /* タイムラインリスト */
+    /* タイムライン専用リスト */
+    .timeline-list {
+        list-style: none;
+        padding: 0;
+        margin: 20px 0 0 0;
+    }
+
     .timeline-list li {
-        margin-bottom: 8px;
+        position: relative;
         padding-left: 0;
-    }
-
-    .timeline-list li::before {
-        content: "";
+        margin-bottom: 20px;
+        display: flex;
+        align-items: flex-start;
+        line-height: 1.8;
     }
 
     .time-slot {
         display: inline-block;
-        width: 110px;
-        color: #555;
+        width: 130px;
+        flex-shrink: 0;
         font-weight: bold;
         font-family: var(--font-mono);
+        font-size: 1.15rem;        /* 時刻を大きく */
+        color: var(--color-secondary);
+        margin-right: 20px;
+    }
+
+    .timeline-list li > span:not(.time-slot) {
+        flex: 1;
     }
 
     /* ハイライト */
     .highlight {
         background: linear-gradient(transparent 60%, var(--color-highlight) 60%);
-        font-weight: 500;
+        font-weight: 600;
+        padding: 0 4px;
     }
 
-    /* 写真エリア */
+    /* タイムライン見出し */
+    .timeline-heading {
+        font-size: 1.15rem;
+        font-weight: bold;
+        margin: 30px 0 20px 0;
+        color: var(--color-primary);
+        padding-left: 8px;
+        border-left: 4px solid var(--color-primary);
+    }
+
+    /* 写真エリア（変更なし） */
     .photo-area {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
@@ -154,27 +180,19 @@ title: Research Log: 二傳 (Niden)
 
     /* 戻るナビゲーション */
     .back-nav {
-        margin-top: 60px;
-        padding-top: 20px;
+        margin-top: 80px;
+        padding-top: 25px;
         border-top: 1px solid #eee;
     }
 
     .back-nav a {
         color: #888;
-        font-size: 0.9rem;
+        font-size: 0.95rem;
         text-decoration: none;
     }
 
     .back-nav a:hover {
         color: var(--color-primary);
-    }
-
-    /* タイムライン見出し */
-    .timeline-heading {
-        font-size: 1rem;
-        margin-top: 20px;
-        margin-bottom: 15px;
-        color: var(--color-muted);
     }
 </style>
 
@@ -202,7 +220,7 @@ title: Research Log: 二傳 (Niden)
         </ul>
 
         <h3 class="timeline-heading">▼ 弘道館プログラム (14:15 - 17:00)</h3>
-        <ul class="note-list timeline-list">
+        <ul class="timeline-list">
             <li><span class="time-slot">13:15</span> 到着、イントロ（5分：テーマを伝える）</li>
             <li><span class="time-slot">13:20</span> 探索（40分：庭と室内）</li>
             <li><span class="time-slot">14:00</span> 浜崎さんお話（30分：見えてる部分と見えてない部分、表と裏）</li>
