Update and rename README.md to index.html htmlに変更

--- a/journeys/fukumoto/index.html
+++ b/journeys/fukumoto/index.html
@@ -4,7 +4,7 @@ title: "Fukumoto Lab: 探究と教育の旅"
 ---
 
 <style>
-    /* 共通スタイル（他のレポートページとトーンを合わせる） */
+    /* 共通スタイル */
     .lab-container {
         max-width: 800px;
         margin: 0 auto;
@@ -134,24 +134,6 @@ title: "Fukumoto Lab: 探究と教育の旅"
         background: #f9f9f9;
         padding: 20px;
         border-radius: 8px;
-    }
-    
-    /* 写真 */
-    .hero-image {
-        width: 100%;
-        height: 300px;
-        object-fit: cover;
-        border-radius: 8px;
-        margin-bottom: 30px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-    .img-caption {
-        text-align: center;
-        font-size: 0.85rem;
-        color: #888;
-        margin-top: -20px;
-        margin-bottom: 30px;
-        font-style: italic;
     }
 </style>
 
