リンク先を修正

--- a/journeys/fukumoto/index.html
+++ b/journeys/fukumoto/index.html
@@ -190,7 +190,7 @@ title: "Fukumoto Lab: 探究と教育の旅"
         <div class="log-grid">
             
             <!-- 堤浅吉漆店 -->
-            <a href="./research_tsutsumi.html" class="log-card">
+            <a href="./tsutsumi.html" class="log-card">
                 <span class="log-date">2025.12.18 Thu</span>
                 <div class="log-title">🌳 堤浅吉漆店 (Tsutsumi)</div>
                 <div class="log-desc">
@@ -200,7 +200,7 @@ title: "Fukumoto Lab: 探究と教育の旅"
             </a>
 
             <!-- 二傳 -->
-            <a href="../nakahigashi/research_niden.html" class="log-card">
+            <a href="./research_niden.html" class="log-card">
                 <span class="log-date">2025.12.18 Thu</span>
                 <div class="log-title">🍱 京料理 二傳 (Niden)</div>
                 <div class="log-desc">
