--- a/journeys/fukumoto/kodokan.html
+++ b/journeys/fukumoto/kodokan.html
@@ -234,8 +234,8 @@ title: Research Log: 弘道館 (Kodokan)
     <div class="video-link-box">
         <div class="video-icon">▶</div>
         <div>
-            <div class="video-text">参考動画: 京菓子と弘道館</div>
-            <a href="https://youtu.be/uklzBqR_oIU" target="_blank" class="video-url">https://youtu.be/uklzBqR_oIU</a>
+            <div class="video-text">参考動画: 弘道館の庭のリサーチ動画</div>
+            <a href="https://youtu.be/v68__8Ui9Jo" target="_blank" class="video-url">https://youtu.be/v68__8Ui9Jo</a>            
         </div>
     </div>
 
