--- a/journeys/fukumoto/kodokan.html
+++ b/journeys/fukumoto/kodokan.html
@@ -254,8 +254,9 @@ title: Research Log: 弘道館 (Kodokan)
         <ul class="timeline-list">
             <li><span class="time-slot">13:15</span> <span>到着、イントロ（5分：テーマを伝える）</span></li>
             <li><span class="time-slot">13:20</span> <span>探索（40分：庭と室内）</span></li>
-            <li><span class="time-slot">14:00</span> <span>浜崎さんお話（30分：見えてる部分と見えてない部分、表と裏）</span></li>
-            <li><span class="time-slot">14:30</span> <span>ふりかえり・休憩（30分）</span></li>
+            <li><span class="time-slot">14:00</span> <span>浜崎さんお話（20分：見えてる部分と見えてない部分、表と裏）</span></li>
+            <li><span class="time-slot">14:20</span> <span>ふりかえり（10分）</span></li>
+            <li><span class="time-slot">14:30</span> <span>休憩（30分）</span></li>
             <li><span class="time-slot">15:00</span> <span>ワークショップ開始</span></li>
             <li><span class="time-slot">17:00</span> <span>ワークショップ終了・撤収</span></li>
         </ul>
