--- a/journeys/fukumoto/research_niden.html
+++ b/journeys/fukumoto/research_niden.html
@@ -137,8 +137,8 @@ title: Research Log: 二傳 (Niden)
         <h2>1. 基本情報・歴史</h2>
         <ul class="note-list">
             <li><strong>創業:</strong> 1757年（明和年間・徳川9代将軍の時代）。約250年の歴史。</li>
-            <li><strong>由来:</strong> 創業者の「佐野伝七」が二条城に納めていたことから「二傳」の屋号に。目指してくる客のために屋号が必要だった。</li>
-            <li><strong>かつての姿:</strong> 元は魚屋。そこから「鳥料理」で名を馳せ、現在は多様な京料理・仕出しへ。時代のニーズに合わせて変化してきた（現代でいうコンビニ的な利便性も？）。</li>
+            <li><strong>由来:</strong> 創業者の「佐野傳七」が二条城に納めていたことから「二傳」の屋号に。目指してくる客のために屋号が必要だった。</li>
+            <li><strong>かつての姿:</strong> 元は魚屋。そこから「鱧料理」で名を馳せ、現在は多様な京料理・仕出しへ。時代のニーズに合わせて変化してきた（現代でいうコンビニ的な利便性も？）。</li>
         </ul>
     </div>
 
