--- a/journeys/fukumoto/index.html
+++ b/journeys/fukumoto/index.html
@@ -162,7 +162,7 @@ title: "Fukumoto Lab: 探究と教育の旅"
         <h2>タイムライン & ルート</h2>
         <p><strong>09:00 - 16:00</strong> (親子連れは16:30頃まで)</p>
         
-        <h3>当日の詳細スケジュール</h3>
+        <h3>当日の詳細スケジュール【修正中】</h3>
         <ul class="timeline-list lab-list">
             <li><span class="time">08:00</span> 集合・観察｜場所未定（25分）・・・賀茂川の大気の流れを見る</li>
             <li><span class="time">08:25</span> 移動（10分）</li>
@@ -176,8 +176,9 @@ title: "Fukumoto Lab: 探究と教育の旅"
                 <small>
                 ・13:15 到着、イントロ（5分）<br>
                 ・13:20 探索（40分：庭と室内）<br>
-                ・14:00 浜崎さんお話（30分：見えてる部分と見えてない部分、表と裏）<br>
-                ・14:30 ふりかえり・休憩（30分）
+                ・14:00 浜崎さんお話（20分：見えてる部分と見えてない部分、表と裏）<br>
+                ・14:20 ふりかえり（10分）<br>
+                ・14:30 休憩（30分）
                 </small>
             </li>
             <li><span class="time">15:00</span> ワークショップ開始</li>
