--- a/journeys/fukumoto/tsutsumi.html
+++ b/journeys/fukumoto/tsutsumi.html
@@ -235,9 +235,9 @@ title: Research Log: 堤浅吉漆店
         <!-- 1枚目 -->
         <div class="photo-box">
             <!-- src="ここに画像ファイルの名前を書く" -->
-            <img src="./taru.jpg" alt="漆の樽・攪拌機">
+            <img src="./taru.jpg" alt="漆の樽">
             <!-- 写真の説明を下に重ねる場合 -->
-            <div class="photo-label">漆の樽・攪拌機</div>
+            <div class="photo-label">漆の樽</div>
         </div>
 
         <!-- 2枚目 -->
@@ -248,8 +248,8 @@ title: Research Log: 堤浅吉漆店
 
         <!-- 3枚目 -->
         <div class="photo-box">
-            <img src="./hashi.jpg" alt="体験用のお箸">
-            <div class="photo-label">体験用のお箸</div>
+            <img src="./color-test.jpg" alt="色のチェック">
+            <div class="photo-label">色のチェック</div>
         </div>
 
     </div>
