--- a/journeys/fukumoto/index.html
+++ b/journeys/fukumoto/index.html
@@ -141,7 +141,7 @@ title: "Fukumoto Lab: 探究と教育の旅"
 
     <header class="lab-header">
         <h1 class="lab-title">Fukumoto Lab</h1>
-        <div class="lab-subtitle">探究と教育の旅：水は誰のもの？見えない水をさがせ！</div>
+        <div class="lab-subtitle">探究と教育の旅：見えない水をさがせ！</div>
     </header>
 
     <div class="lab-section">
