--- a/journeys/fukumoto/tsutsumi.html
+++ b/journeys/fukumoto/tsutsumi.html
@@ -232,26 +232,21 @@ title: Research Log: 堤浅吉漆店
     <h2>ビジュアル記録</h2>
     <div class="photo-area">
         
-        <!-- 1枚目 -->
         <div class="photo-box">
-            <!-- src="ここに画像ファイルの名前を書く" -->
-            <img src="./taru.jpg" alt="漆の樽">
-            <!-- 写真の説明を下に重ねる場合 -->
+            <img src="../../assets/image/taru.jpg" alt="漆の樽">
             <div class="photo-label">漆の樽</div>
         </div>
 
-        <!-- 2枚目 -->
         <div class="photo-box">
-            <img src="./nama_urushi.jpg" alt="精製前の生漆">
+             <img src="../../assets/image/nama_urushi.jpg" alt="精製前の生漆">
             <div class="photo-label">精製前の生漆</div>
         </div>
 
-        <!-- 3枚目 -->
         <div class="photo-box">
-            <img src="./color-test.jpg" alt="色のチェック">
+             <img src="../../assets/image/color-test.jpg" alt="色のチェック">
             <div class="photo-label">色のチェック</div>
         </div>
-
+        
     </div>
 </div>
 
