tsutsumi.html を更新

--- a/journeys/fukumoto/tsutsumi.html
+++ b/journeys/fukumoto/tsutsumi.html
@@ -175,28 +175,57 @@ title: Research Log: 堤浅吉漆店
     </div>
 
     <div class="note-section">
-        <h2>5. ワークショップのアイデア</h2>
-        <h3>問い：なぜ「漆」には「水」という字があるのか？</h3>
+        <h2>5. ワークショップ構成案（60分）</h2>
+        <p style="margin-bottom:20px;">テーマ：「見えない水」を探し、木を守る体験</p>
+
+        <h3>STEP 1: 導入・観察（触れる・問いを立てる）</h3>
         <ul class="note-list">
-            <li><strong>触れる体験:</strong> まずはお椀を触る。「しっとりしているのに、サラサラしている」。</li>
-            <li><strong>水分の話:</strong> 乾燥過程で水分を吸って増える。人間の体もトマトも水分。生き物としての漆を感じる。</li>
-            <li><strong>所作:</strong> 漆の塗膜の感触が、日本人の所作や仕草を作ってきたのではないか？</li>
+            <li><strong>まず、お椀に触れる:</strong>
+                <ul>
+                    <li>質感を感じる。「しっとりしているのに、サラサラしている」。</li>
+                    <li>この独特な「しっとり感」は、水分を含んで固まる性質から来ている。</li>
+                </ul>
+            </li>
+            <li><strong>「漆」と水の関係:</strong>
+                <ul>
+                    <li>漢字に注目する。「漆」という字には「水（さんずい）」が入っている。</li>
+                    <li>乾燥過程で空気中の水分を吸い、体積（容量）が増える不思議な液体。</li>
+                </ul>
+            </li>
+            <li><strong>問いを投げる:</strong>
+                <ul>
+                    <li>「どう感じた？」「どこからこの感覚が来るのかな？」</li>
+                    <li>なぜこういう風に感じるのか、その答えを工場へ探しに行く。</li>
+                </ul>
+            </li>
         </ul>
 
-    
-        <h3>構成案（ショートVer.）</h3>
+        <h3>STEP 2: 工場見学（答えを探す・水を感じる）</h3>
         <ul class="note-list">
-            <li>1. お椀に触れて、感覚を言葉にする。「どう感じた？」「どこからこの感覚が来るのかな？」</li>
-            <li>2. 工場見学：どうやってできているか、「なんで？」の答えを探しに行く。</li>
-            <li>3. お箸を塗る体験：「木を守る」ことを自分の手でやる。</li>
-            <li>※ 持ち帰り：ビニール袋にティッシュ（湿気）を入れて、暖かい部屋に置く（ムロの再現）。</li>
+            <li><strong>漆工芸は「水（湿気）」を感じること:</strong>
+                <ul>
+                    <li>水の粒子の大きさが「艶」を左右する。</li>
+                    <li>職人は水（湿気）の量で乾きをコントロールしている。</li>
+                </ul>
+            </li>
+            <li><strong>つながりの発見:</strong> 木、土、人間、すべてがつながって、目の前の漆器ができている。</li>
         </ul>
-        
-        <h3>その他の可能性</h3>
+
+        <h3>STEP 3: 実践（お箸を塗る・木を守る）</h3>
         <ul class="note-list">
-            <li>葉っぱに漆を塗る、レーザーで焼き付ける。</li>
-            <li>「漆とプラスチックを見分ける」クイズ。</li>
-            <li>子供の時に植えた木で、大人になってから物を作る。</li>
+            <li><strong>お箸の意味:</strong> 人と食べ物をつないでくれる道具。</li>
+            <li><strong>「塗る」とは「木を守る」こと:</strong>
+                <ul>
+                    <li>日本人は古くから、御神木や仏様が朽ちるのを防ぐために漆を塗ってきた。</li>
+                    <li>重ねれば重ねるほど、強く丈夫になる。</li>
+                </ul>
+            </li>
+            <li><strong>自分の手で守る体験:</strong>
+                <ul>
+                    <li>ただ塗るのではなく、「木を守る」ことを自分の手で行う。</li>
+                    <li>大人も子供も、工場で見つけた「なんで？」の答えを持って手を動かす。</li>
+                </ul>
+            </li>
         </ul>
     </div>
 
@@ -228,4 +257,3 @@ title: Research Log: 堤浅吉漆店
     </div>
 
 </div>
-
