インデックスに下鴨神社ページのリンクを追加。

--- a/journeys/fukumoto/index.html
+++ b/journeys/fukumoto/index.html
@@ -190,7 +190,19 @@ title: "Fukumoto Lab: 探究と教育の旅"
         <h2>Research Log (活動記録)</h2>
         <div class="log-grid">
             
-            <!-- 堤浅吉漆店 -->
+            <a href="./shimogamo.html" class="log-card">
+                <span class="log-date">2025.12.15 Mon</span>
+                <div class="log-title">⛩️ 下鴨神社・鴨川デルタ (Shimogamo)</div>
+                <div class="log-desc">
+                    <img src="./shimogamo01.jpg" alt="下鴨神社" style="width:100%; height:120px; object-fit:cover; border-radius:4px; margin-top:10px; margin-bottom:10px;">
+                    <div>
+                        見える水と見えない水。神話と古来の感性を辿る。<br>
+                        御手洗池からデルタでの合流、大気の流れを感じるセッション。<br>
+                        <span style="font-size:0.8rem; color:#888;">#水と神話 #鴨川デルタ #山紫水明</span>
+                    </div>
+                </div>
+            </a>
+
             <a href="./tsutsumi.html" class="log-card">
                 <span class="log-date">2025.12.18 Thu</span>
                 <div class="log-title">🌳 堤浅吉漆店 (Tsutsumi)</div>
@@ -200,7 +212,6 @@ title: "Fukumoto Lab: 探究と教育の旅"
                 </div>
             </a>
 
-            <!-- 二傳 -->
             <a href="./research_niden.html" class="log-card">
                 <span class="log-date">2025.12.18 Thu</span>
                 <div class="log-title">🍱 京料理 二傳 (Niden)</div>
@@ -210,7 +221,6 @@ title: "Fukumoto Lab: 探究と教育の旅"
                 </div>
             </a>
 
-            <!-- 弘道館 -->
             <a href="./kodokan.html" class="log-card">
                 <span class="log-date">2025.12.21 Sat (Scheduled)</span>
                 <div class="log-title">🍵 弘道館 (Kodokan)</div>
@@ -219,19 +229,6 @@ title: "Fukumoto Lab: 探究と教育の旅"
                     <span style="font-size:0.8rem; color:#888;">#茶の湯 #庭園 #四季</span>
                 </div>
             </a>
-
-            <!-- 下鴨神社 -->
-            <div class="log-card" style="border-left: 4px solid #ccc; cursor: default;">
-                <span class="log-date">2025.12.15 Mon</span>
-                <div class="log-title">⛩️ 下鴨神社リサーチ</div>
-                <div class="log-desc">
-                    <img src="./shimogamo01.jpg" alt="下鴨神社" style="width:100%; height:120px; object-fit:cover; border-radius:4px; margin-top:10px;">
-                    <div style="margin-top:5px; font-size:0.9rem;">
-                        川の流れに反して発生するアメンボの波紋。<br>
-                        視点: 水の湧き出し口、植生、歴史的背景。
-                    </div>
-                </div>
-            </div>
 
         </div>
     </div>
