index.html を更新　タイムラインを最新版に照らし合わせて修正

--- a/journeys/fukumoto/index.html
+++ b/journeys/fukumoto/index.html
@@ -160,29 +160,50 @@ title: "Fukumoto Lab: 探究と教育の旅"
 
     <div class="lab-section">
         <h2>タイムライン & ルート</h2>
-        <p><strong>09:00 - 16:00</strong> (親子連れは16:30頃まで)</p>
+        <p><strong>08:15 - 17:00</strong></p>
         
-        <h3>当日の詳細スケジュール【修正中】</h3>
+        <h3>1月24日（土）詳細スケジュール案</h3>
         <ul class="timeline-list lab-list">
-            <li><span class="time">08:00</span> 集合・観察｜場所未定（25分）・・・賀茂川の大気の流れを見る</li>
-            <li><span class="time">08:25</span> 移動（10分）</li>
-            <li><span class="time">08:35</span> 下鴨神社・御手洗池（45分）<br><small>神と水と人の暮らし、水とわたしたちのつながり</small></li>
-            <li><span class="time">09:20</span> 移動｜荒神口〜堤浅吉漆店（20分）</li>
-            <li><span class="time">09:30</span> <strong>堤浅吉漆店</strong>（60分）</li>
-            <li><span class="time">10:30</span> 移動（20分）｜堤浅吉漆店〜京料理二傳</li>
-            <li><span class="time">11:30</span> <strong>京料理 二傳</strong>（90分）</li>
-            <li><span class="time">13:00</span> 移動｜京料理二傳〜弘道館</li>
-            <li><span class="time">13:15</span> <strong>弘道館</strong> 到着<br>
+            <li><span class="time">08:15</span> <strong>集合・鴨川探索</strong>（20分）｜集合：出町柳駅付近（調整中）<br>
+                <small>
+                ・イントロダクション、自己紹介<br>
+                ・川の合流点（デルタ）で、水と大気の流れを感じる
+                </small>
+            </li>
+            <li><span class="time">08:35</span> 移動（10分）｜※徒歩 or ハイヤー（要下見確認）</li>
+            <li><span class="time">08:45</span> <strong>下鴨神社・御手洗池</strong>（45分）<br>
+                <small>
+                ・神と水と人の暮らし、水とわたしたちのつながり<br>
+                ・御手洗池の湧き水と伝承
+                </small>
+            </li>
+            <li><span class="time">09:30</span> 移動（20分）｜MKタクシーハイヤー（9人乗り×2）</li>
+            <li><span class="time">09:50</span> <strong>堤浅吉漆店</strong>（80分）<br>
+                <small>
+                ・漆にまつわる水の可変性や面白さを学ぶ<br>
+                ・見学：工房見学（30分）<br>
+                ・体験：漆塗りの体験など（30分）
+                </small>
+            </li>
+            <li><span class="time">11:10</span> 移動（20分）｜MKタクシーハイヤー（9人乗り×2）</li>
+            <li><span class="time">11:30</span> <strong>京料理 二傳</strong>（90分）<br>
+                <small>
+                ・自然を模して一皿に描く京料理の感性<br>
+                ・体験：季節/風景をマイお弁当に入れて味わう（60分・予定）
+                </small>
+            </li>
+            <li><span class="time">13:00</span> 移動（15分）｜MKタクシーハイヤー（9人乗り×2）</li>
+            <li><span class="time">13:15</span> <strong>弘道館</strong> 到着（75分）<br>
                 <small>
                 ・13:15 到着、イントロ（5分）<br>
                 ・13:20 探索（40分：庭と室内）<br>
                 ・14:00 浜崎さんお話（20分：見えてる部分と見えてない部分、表と裏）<br>
-                ・14:20 ふりかえり（10分）<br>
-                ・14:30 休憩（30分）
+                ・14:20 ふりかえり（10分）
                 </small>
             </li>
-            <li><span class="time">15:00</span> ワークショップ開始</li>
-            <li><span class="time">17:00</span> ワークショップ終了・撤収</li>
+            <li><span class="time">14:30</span> ツアー終了・休憩（30分）</li>
+            <li><span class="time">15:00</span> <strong>ワークショップ開始</strong>（120分）</li>
+            <li><span class="time">17:00</span> 終了・撤収</li>
         </ul>
     </div>
 
@@ -194,8 +215,8 @@ title: "Fukumoto Lab: 探究と教育の旅"
                 <span class="log-date">2025.12.15 Mon</span>
                 <div class="log-title">⛩️ 下鴨神社・鴨川デルタ (Shimogamo)</div>
                 <div class="log-desc">
-                        見える水と見えない水。神話と古来の感性を辿る。<br>
-                        <span style="font-size:0.8rem; color:#888;">#水と神話 #鴨川デルタ #山紫水明</span>
+                    見える水と見えない水。神話と古来の感性を辿る。<br>
+                    <span style="font-size:0.8rem; color:#888;">#水と神話 #鴨川デルタ #山紫水明</span>
                 </div>
             </a>
 
