googleフォームのリンクを貼り付け

--- a/journeys/fukumoto/mission_water.html
+++ b/journeys/fukumoto/mission_water.html
@@ -341,7 +341,7 @@ title: "事前ワーク：見えない水を探せ！"
         <h3>君も見つけた？</h3>
         <p>家の中や近所で「水」を見つけたら、写真を撮って送ってね。<br>絵を描いて写真に撮ってもOK！</p>
         
-        <a href="【ここにGoogleフォームのURL】" target="_blank" class="btn-submit">発見を報告する！</a>
+        <a href="https://forms.gle/jzf28vduQ8hwefRn9" target="_blank" class="btn-submit">発見を報告する！</a>
     </div>
 
 </div>
